ndryshime tjera ne login

--- a/pamjet/kycu.html
+++ b/pamjet/kycu.html
@@ -4,42 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../asetet/css/kycu.css">
+    <title>Kyçu | LMS</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../asetet/css/kycu.css">
 </head>
 
 <body>
-    <div class="container">
-        <img class="logo" src="../asetet/foto/lms-high-resolution-logo-transparent.png" alt="">
-        <p class="titulli">Kyçuni në program</p>
-        <form action="">
-            <div class="input-group">
-                <label for="email">Email</label>
-                <div class="input">
-                    <span class="material-symbols-outlined icon">email</span>
-                    <input class="input-text" type="text" name="email" placeholder="Shkruaj emailin...">
+    <section class="container">
+        <div class="form">
+            <div>
+                <div class="foto">
+                    <img src="../asetet/foto/lms-high-resolution-logo-transparent.png" alt="">
                 </div>
+                <header>Kyçuni në program</header>
+
+                <form action="#">
+                    <div class="fusha">
+                        <label for="">Email</label>
+                        <div class="fusha-icon">
+                            <span class="material-symbols-outlined icon">email</span>
+                            <input type="email" class="input" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="fusha">
+                        <label for="">Fjalëkalimi</label>
+                        <div class="fusha-icon">
+                            <span class="material-symbols-outlined icon">lock</span>
+                            <input type="password" class="input" placeholder="Fjalëkalimi">
+                        </div>
+                    </div>
+                    <div class="form-link">
+                        <span class="ruaj-te-dhenat"><input type="checkbox"> Ruaj të dhënat</span>
+                        <a href="#" class="forgot-pass">Ke harruar fjalëkalimin?</a>
+                    </div>
+                    <div class="fusha btn">
+                        <button type="submit">Kyçu</button>
+                    </div>
+                </form>
             </div>
-            <div class="input-group">
-                <label for="fjalekalimi">Fjalëkalimi</label>
-                <div name="input">
-                    <span class="material-symbols-outlined icon">lock</span>
-                    <input class="input-text" type="text" name="fjalekalimi" placeholder="Shkruaj fjalëkalimin...">
-                </div>
-            </div>
-            <div class="input-adicionet">
-                <div class="me-kujto">
-                    <input type="checkbox" name="me_kujto">
-                    <label for="me_kujto">Ruaj të dhënat</label>
-                </div>
-                <div class="harruar-fjalekalimin">
-                    <a href="#">Ke harruar fjalëkalimin?</a>
-                </div>
-            </div>
-            <button class="btn" type="submit">Kyçu</button>
-        </form>
-    </div>
+        </div>
+    </section>
 </body>
 
 </html>
