--- a/pamjet/lockscreen.html
+++ b/pamjet/lockscreen.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="../asetet/css/lockscreen.css">
 </head>
+
 <body>
-    <section>
-        <div></div>
+    <section class="container">
+        <div class="form">
+            <div class="foto">
+                <img src="../asetet/foto/user.jpg" alt="">
+            </div>
+            <header>Përshëndetje, Filan!</header>
+            <form action="#">
+                <div class="fusha">
+                    <label for="">Fjalëkalimi</label>
+                    <div class="fusha-icon">
+                        <span class="material-symbols-outlined icon">lock</span>
+                        <input type="password" class="input" placeholder="Fjalëkalimi">
+                    </div>
+                </div>
+                <div class="fusha btn">
+                    <button type="submit">Kyçu</button>
+                </div>
+            </form>
+            <span class="llogari-tjeter">Nuk jeni ju? Kyçuni me <a href="#">llogari tjetër</a></span>
+        </div>
     </section>
 </body>
+
 </html>
