lockscreen u kry, ka mundsi naj minor bug me pas

--- a/pamjet/lockscreen.html
+++ b/pamjet/lockscreen.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
-    <section class="container">
-        <div class="form">
+
+    <div class="left-side">
+        <div class="form-container">
             <div class="foto">
                 <img src="../asetet/foto/user.jpg" alt="">
             </div>
-            <header>Përshëndetje, Filan!</header>
+            <p class="titulli">Përshëndetje, Filan!</p>
             <form action="#">
                 <div class="fusha">
                     <label for="">Fjalëkalimi</label>
@@ -28,9 +29,15 @@
                     <button type="submit">Kyçu</button>
                 </div>
             </form>
-            <span class="llogari-tjeter">Nuk jeni ju? Kyçuni me <a href="#">llogari tjetër</a></span>
         </div>
-    </section>
+    </div>
+
+    <div class="right-side">
+        <div class="white-logo">
+            <!-- Your white logo content goes here -->
+            <img src="../asetet/foto/lms-white.png" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
