--- a/pamjet/kycu.html
+++ b/pamjet/kycu.html
@@ -13,7 +13,7 @@
     <section class="container">
         <div class="form">
             <div class="foto">
-                <img src="../asetet/foto/lms-high-resolution-logo-transparent.png" alt="">
+                <img src="../asetet/foto/lms.png" alt="">
             </div>
             <header>Kyçuni në program</header>
 
