Changes to navbar and files
Recreated the navbar with responsivity, changed file name from ballina.css to style.css for general use across all the pages.

--- a/pamjet/ballina.html
+++ b/pamjet/ballina.html
@@ -3,26 +3,96 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMS | Ballina</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../asetet/css/ballina.css">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../asetet/css/style.css">
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navbar">
-            <div class="ana-majt">
-                <i class="ikona-hamburger mdi mdi-menu"></i>
-                <a class="logo" href="#">
-                    <p>LMS</p>
-                </a>
-            </div>
-            <img class="user-img" src="../asetet/foto/user.jpg" alt="">
-        </nav>
-    </header>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A eveniet inventore fugiat nemo nisi eius, minima
-        consectetur neque voluptas ipsum illo hic nihil quos ducimus alias totam quibusdam vero dicta.</p>
+    <nav class="navbar">
+        <div class="logo_item">
+            <i class="bx bx-menu" style="color:#e8f0f5" id="sidebarOpen"></i>
+            <img src="/asetet/foto/lms-high-resolution-logo-transparent-white.png" alt=""></i>
+        </div>
+
+
+        <div class="navbar_content">
+            <i class="bi bi-grid"></i>
+            <i class='bx bx-bell' style='color:#f6f6f6'></i>
+            <img src="/asetet/foto/user.jpg" alt="" class="profile" />
+        </div>
+    </nav>
+
+    <nav class="sidebar">
+        <div class="menu_content">
+            <ul class="menu_items">
+
+                <ul class="menu_items">
+                    <div class="menu_title menu_kryesoret"></div>
+                    <li class="item">
+                        <a href="#" class="nav_link">
+                            <span class="navlink_icon">
+                                <i class="bx bx-home-alt"></i>
+                            </span>
+                            <span class="navlink">Ballina</span>
+                        </a>
+                    </li>
+
+                    <li class="item">
+                        <a href="#" class="nav_link">
+                            <span class="navlink_icon">
+                                <i class="bx bx-book-open"></i>
+                            </span>
+                            <span class="navlink">Ushtrimet</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="nav_link">
+                            <span class="navlink_icon">
+                                <i class="bx bx-time-five"></i>
+                            </span>
+                            <span class="navlink">Orari</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="menu_items">
+                    <div class="menu_title menu_shtesa"></div>
+                    <li class="item">
+                        <a href="#" class="nav_link">
+                            <span class="navlink_icon">
+                                <i class="bx bx-archive"></i>
+                            </span>
+                            <span class="navlink">Arkiva</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="nav_link">
+                            <span class="navlink_icon">
+                                <i class="bx bx-cog"></i>
+                            </span>
+                            <span class="navlink">Sfondi</span>
+                        </a>
+                    </li>
+
+                </ul>
+
+                <!-- Sidebar Open / Close -->
+                <div class="bottom_content">
+                    <div class="bottom expand_sidebar">
+                        <i class='bx bx-menu'></i>
+                    </div>
+                    <div class="bottom collapse_sidebar">
+                        <i class='bx bx-menu'></i>
+                    </div>
+                </div>
+        </div>
+    </nav>
+
+    <script src="/asetet/js/nav.js"></script>
 </body>
+
+
 
 </html>
