--- a/pamjet/ballina.html
+++ b/pamjet/ballina.html
@@ -3,96 +3,162 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMS | Ballina</title>
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../asetet/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="../asetet/css/ballina.css">
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="logo_item">
-            <i class="bx bx-menu" style="color:#e8f0f5" id="sidebarOpen"></i>
-            <img src="/asetet/foto/lms-high-resolution-logo-transparent-white.png" alt=""></i>
+    <div class="sidebar active">
+        <div class="top">
+            <div class="logo">
+                <img src="" alt="" />
+            </div>
         </div>
-
-
-        <div class="navbar_content">
-            <i class="bi bi-grid"></i>
-            <i class='bx bx-bell' style='color:#f6f6f6'></i>
-            <img src="/asetet/foto/user.jpg" alt="" class="profile" />
+        <div class="user">
+            <img class="user-img" src="../asetet/foto/user.jpg" alt="">
+            <div>
+                <p class="bold">Filan Fisteku</p>
+                <p class="bold">filanfisteku@gmail.com</p>
+            </div>
         </div>
-    </nav>
-
-    <nav class="sidebar">
-        <div class="menu_content">
-            <ul class="menu_items">
-
-                <ul class="menu_items">
-                    <div class="menu_title menu_kryesoret"></div>
-                    <li class="item">
-                        <a href="#" class="nav_link">
-                            <span class="navlink_icon">
-                                <i class="bx bx-home-alt"></i>
-                            </span>
-                            <span class="navlink">Ballina</span>
-                        </a>
-                    </li>
-
-                    <li class="item">
-                        <a href="#" class="nav_link">
-                            <span class="navlink_icon">
-                                <i class="bx bx-book-open"></i>
-                            </span>
-                            <span class="navlink">Ushtrimet</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#" class="nav_link">
-                            <span class="navlink_icon">
-                                <i class="bx bx-time-five"></i>
-                            </span>
-                            <span class="navlink">Orari</span>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="menu_items">
-                    <div class="menu_title menu_shtesa"></div>
-                    <li class="item">
-                        <a href="#" class="nav_link">
-                            <span class="navlink_icon">
-                                <i class="bx bx-archive"></i>
-                            </span>
-                            <span class="navlink">Arkiva</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#" class="nav_link">
-                            <span class="navlink_icon">
-                                <i class="bx bx-cog"></i>
-                            </span>
-                            <span class="navlink">Sfondi</span>
-                        </a>
-                    </li>
-
-                </ul>
-
-                <!-- Sidebar Open / Close -->
-                <div class="bottom_content">
-                    <div class="bottom expand_sidebar">
-                        <i class='bx bx-menu'></i>
+        <div class="separator"></div>
+        <span class="sidebar-category">Kryesoret</span>
+        <ul>
+            <li>
+                <a href="#">
+                    <i class="material-symbols-outlined icon">library_books</i>
+                    <span class="nav-item">Ballina</span>
+                </a>
+                <span class="tooltip">Ballina</span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-symbols-outlined icon">auto_stories</i>
+                    <span class="nav-item">Ushtrimet</span>
+                </a>
+                <span class="tooltip">Ushtrimet</span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-symbols-outlined icon">schedule</i>
+                    <span class="nav-item">Orari</span>
+                </a>
+                <span class="tooltip">Orari</span>
+            </li>
+        </ul>
+        <div class="separator"></div>
+        <span class="sidebar-category">Shtesa</span>
+        <ul>
+            <li>
+                <a href="#">
+                    <i class="material-symbols-outlined icon">archive</i>
+                    <span class="nav-item">Arkiva</span>
+                </a>
+                <span class="tooltip">Arkiva</span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="material-symbols-outlined icon">settings</i>
+                    <span class="nav-item">Sfondi</span>
+                </a>
+                <span class="tooltip">Sfondi</span>
+            </li>
+        </ul>
+    </div>
+    <div class="topbar">
+        <div class="left">
+            <a id="btn" href="javascript: void(0);"><i class="material-symbols-outlined icon">menu</i></a>
+        </div>
+        <div class="right">
+            <i class="material-symbols-outlined icon">notifications</i>
+            <img class="user-img" src="../asetet/foto/user.jpg" alt="">
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="container">
+            <div class="breadcrumbs">
+                <span class="bc-header">Ballina</span>
+                <span class="bc-bc">
+                    <a href="#">Ballina</a> <i class="material-symbols-outlined icon">chevron_right</i> Të gjitha
+                </span>
+            </div>
+            <div class="filters">
+                <div class="left">
+                    <span>Të gjitha postimet</span>
+                    <span class="left-num">54</span>
+                </div>
+                <div class="right">
+                    <button><i class="material-symbols-outlined icon">filter_alt</i> Filtro</button>
+                </div>
+            </div>
+            <div class="separator"></div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="left">
+                        <p class="card-header"><i class="material-symbols-outlined icon">tag</i> Hyrje në
+                            algoritme</p>
+                        <p class="card-title">2.2 Mergesort</p>
+                        <p class="card-footer"><i class="material-symbols-outlined icon">calendar_today</i> Krijuar më 23 Qershor
+                            2023</p>
                     </div>
-                    <div class="bottom collapse_sidebar">
-                        <i class='bx bx-menu'></i>
+                    <div class="right">
+                        <div>
+                            <p class="card-p-role">Profesori</p>
+                            <p class="card-p-name">Mirlinda Reqica</p>
+                        </div>
+                        <i class="material-symbols-outlined icon">face</i>
                     </div>
                 </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="left">
+                        <p class="card-header"><i class="material-symbols-outlined icon">tag</i> Hyrje në
+                            algoritme</p>
+                        <p class="card-title">2.2 Mergesort</p>
+                        <p class="card-footer"><i class="material-symbols-outlined icon">calendar_today</i> Krijuar më 23 Qershor
+                            2023</p>
+                    </div>
+                    <div class="right">
+                        <div>
+                            <p class="card-p-role">Profesori</p>
+                            <p class="card-p-name">Mirlinda Reqica</p>
+                        </div>
+                        <i class="material-symbols-outlined icon">face</i>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="left">
+                        <p class="card-header"><i class="material-symbols-outlined icon">tag</i> Hyrje në
+                            algoritme</p>
+                        <p class="card-title">2.2 Mergesort</p>
+                        <p class="card-footer"><i class="material-symbols-outlined icon">calendar_today</i> Krijuar më 23 Qershor
+                            2023</p>
+                    </div>
+                    <div class="right">
+                        <div>
+                            <p class="card-p-role">Profesori</p>
+                            <p class="card-p-name">Mirlinda Reqica</p>
+                        </div>
+                        <i class="material-symbols-outlined icon">face</i>
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
-
-    <script src="/asetet/js/nav.js"></script>
+    </div>
 </body>
 
+<script>
+    let btn = document.querySelector('#btn');
+    let sidebar = document.querySelector('.sidebar');
 
+    btn.onclick = function () {
+        sidebar.classList.toggle('active');
+    }
+</script>
 
 </html>
