--- a/app/pamjet/kycu.html
+++ b/app/pamjet/kycu.html
@@ -1,40 +1,41 @@
-<?php
-    require('partials/head.php');
-?>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kyçu | LMS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="../asetet/css/kycu.css">
+</head>
 
 <body>
     <section class="container">
         <div class="form">
             <div class="foto">
-                <img src="../../public/asetet/foto/lms.png" alt="">
+                <img src="../asetet/foto/lms.png" alt="">
             </div>
             <header>Kyçuni në program</header>
 
-            <form action="/" onsubmit="return validateForm()">
+            <form action="#">
                 <div class="fusha">
-                    <label for="email">Email</label>
+                    <label for="">Email</label>
                     <div class="fusha-icon">
                         <span class="material-symbols-outlined icon">email</span>
-                        <input type="email" id="email" class="input" placeholder="Email" oninput="validateEmail()">
+                        <input type="email" class="input" placeholder="Email">
                     </div>
-                    <div class="error" id="emailError"></div>
                 </div>
-
                 <div class="fusha">
-                    <label for="password">Fjalëkalimi</label>
+                    <label for="">Fjalëkalimi</label>
                     <div class="fusha-icon">
                         <span class="material-symbols-outlined icon">lock</span>
-                        <input type="password" id="password" class="input" placeholder="Fjalëkalimi"
-                            oninput="validatePassword()">
+                        <input type="password" class="input" placeholder="Fjalëkalimi">
                     </div>
-                    <div class="error" id="passwordError"></div>
                 </div>
-
                 <div class="form-link">
                     <span class="ruaj-te-dhenat"><input type="checkbox"> Ruaj të dhënat</span>
                     <a href="#" class="forgot-pass">Ke harruar fjalëkalimin?</a>
                 </div>
-
                 <div class="fusha btn">
                     <button type="submit">Kyçu</button>
                 </div>
@@ -42,6 +43,5 @@
         </div>
     </section>
 </body>
-    <?= require('partials/script.php'); ?>
 
 </html>
