--- a/app/pamjet/lockscreen.html
+++ b/app/pamjet/lockscreen.html
@@ -1,23 +1,29 @@
-<?=require('partials/head.php');?>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="../asetet/css/lockscreen.css">
+</head>
 
 <body>
 
     <div class="left-side">
         <div class="form-container">
             <div class="foto">
-                <img src="../../public/asetet/foto/user.jpg" alt="">
+                <img src="../asetet/foto/user.jpg" alt="">
             </div>
             <p class="titulli">Përshëndetje, Filan!</p>
-            <form action="#" onsubmit="return validateForm()">
+            <form action="#">
                 <div class="fusha">
                     <label for="">Fjalëkalimi</label>
                     <div class="fusha-icon">
                         <span class="material-symbols-outlined icon">lock</span>
-                        <input type="password" id="password" class="input" placeholder="Fjalëkalimi"
-                            oninput="validatePassword()">
+                        <input type="password" class="input" placeholder="Fjalëkalimi">
                     </div>
-                    <div class="error" id="passwordError"></div>
                 </div>
                 <div class="fusha btn">
                     <button type="submit">Kyçu</button>
@@ -29,11 +35,9 @@
     <div class="right-side">
         <div class="white-logo">
             <!-- Your white logo content goes here -->
-            <img src="../../public/asetet/foto/lms-white.png" alt="">
+            <img src="../asetet/foto/lms-white.png" alt="">
         </div>
     </div>
-
-<?= require('partials/script.php'); ?>
 </body>
 
 </html>
